created header and styled it

--- a/index.html
+++ b/index.html
@@ -7,5 +7,46 @@
     <link rel="stylesheet" href="./css/main.css" />
     <script src="./js/app.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="container">
+        <div class="header__wrapper">
+          <div class="logo">
+            <img
+              src="./assets/images/company_logo.svg"
+              alt="company logo"
+              class="logo__image"
+            />
+          </div>
+          <nav class="nav">
+            <ul class="nav__list">
+              <li><a href="#!" class="nav__link">ABOUT US</a></li>
+              <li><a href="#!" class="nav__link">PROJECTS</a></li>
+              <li><a href="#!" class="nav__link">NEWS</a></li>
+              <li><a href="#!" class="nav__link">CONTACT</a></li>
+            </ul>
+          </nav>
+          <div class="socials">
+            <a href="#!" class="socials__link">
+              <svg class="icon">
+                <use href="assets/images/sprite.svg#icon-facebook"></use>
+              </svg>
+            </a>
+
+            <a href="#!" class="socials__link">
+              <svg class="icon">
+                <use href="assets/images/sprite.svg#icon-twitter"></use>
+              </svg>
+            </a>
+
+            <a href="#!" class="socials__link">
+              <svg class="icon">
+                <use href="assets/images/sprite.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </div>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
