--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
               </svg>
             </a>
           </div>
+          <span class="burger"></span>
         </div>
       </div>
     </header>
