created hero section

--- a/index.html
+++ b/index.html
@@ -49,5 +49,22 @@
         </div>
       </div>
     </header>
+    <main class="main">
+      <section class="hero">
+        <div class="container">
+          <div class="screen">
+            <h1 class="main__title">SIMPLE & MODERN</h1>
+            <p class="subtitle">WE MAKE THE WORLD BEAUTIFUL EVERYDAY</p>
+          </div>
+        </div>
+        <div class="dots" id="parent">
+          <button class="dot"></button>
+          <button class="dot"></button>
+          <button class="dot"></button>
+          <button class="dot"></button>
+          <button class="dot"></button>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
