created images section, styled it , added adaptibe

--- a/index.html
+++ b/index.html
@@ -8,63 +8,116 @@
     <script src="./js/app.js" defer></script>
   </head>
   <body>
-    <header class="header">
-      <div class="container">
-        <div class="header__wrapper">
-          <div class="logo">
-            <img
-              src="./assets/images/company_logo.svg"
-              alt="company logo"
-              class="logo__image"
-            />
-          </div>
-          <nav class="nav">
-            <ul class="nav__list">
-              <li><a href="#!" class="nav__link">ABOUT US</a></li>
-              <li><a href="#!" class="nav__link">PROJECTS</a></li>
-              <li><a href="#!" class="nav__link">NEWS</a></li>
-              <li><a href="#!" class="nav__link">CONTACT</a></li>
-            </ul>
-          </nav>
-          <div class="socials">
-            <a href="#!" class="socials__link">
-              <svg class="icon">
-                <use href="assets/images/sprite.svg#icon-facebook"></use>
-              </svg>
-            </a>
-
-            <a href="#!" class="socials__link">
-              <svg class="icon">
-                <use href="assets/images/sprite.svg#icon-twitter"></use>
-              </svg>
-            </a>
-
-            <a href="#!" class="socials__link">
-              <svg class="icon">
-                <use href="assets/images/sprite.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </div>
-          <span class="burger"></span>
-        </div>
-      </div>
-    </header>
-    <main class="main">
-      <section class="hero">
+    <div class="wrapper">
+      <header class="header">
         <div class="container">
-          <div class="screen">
-            <h1 class="main__title">SIMPLE & MODERN</h1>
-            <p class="subtitle">WE MAKE THE WORLD BEAUTIFUL EVERYDAY</p>
+          <div class="header__wrapper">
+            <div class="logo">
+              <img
+                src="./assets/images/company_logo.svg"
+                alt="company logo"
+                class="logo__image"
+              />
+            </div>
+            <nav class="nav">
+              <ul class="nav__list">
+                <li><a href="#!" class="nav__link">ABOUT US</a></li>
+                <li><a href="#!" class="nav__link">PROJECTS</a></li>
+                <li><a href="#!" class="nav__link">NEWS</a></li>
+                <li><a href="#!" class="nav__link">CONTACT</a></li>
+              </ul>
+            </nav>
+            <div class="socials">
+              <a href="#!" class="socials__link">
+                <svg class="icon">
+                  <use href="assets/images/sprite.svg#icon-facebook"></use>
+                </svg>
+              </a>
+
+              <a href="#!" class="socials__link">
+                <svg class="icon">
+                  <use href="assets/images/sprite.svg#icon-twitter"></use>
+                </svg>
+              </a>
+
+              <a href="#!" class="socials__link">
+                <svg class="icon">
+                  <use href="assets/images/sprite.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </div>
+            <span class="burger"></span>
           </div>
         </div>
-        <div class="dots" id="parent">
-          <button class="dot"></button>
-          <button class="dot"></button>
-          <button class="dot"></button>
-          <button class="dot"></button>
-          <button class="dot"></button>
-        </div>
-      </section>
-    </main>
+      </header>
+      <main class="main">
+        <section class="hero">
+          <div class="container">
+            <div class="screen">
+              <h1 class="main__title">SIMPLE & MODERN</h1>
+              <p class="subtitle">WE MAKE THE WORLD BEAUTIFUL EVERYDAY</p>
+            </div>
+          </div>
+          <div class="dots" id="parent">
+            <button class="dot"></button>
+            <button class="dot"></button>
+            <button class="dot"></button>
+            <button class="dot"></button>
+            <button class="dot"></button>
+          </div>
+        </section>
+
+        <section class="section">
+          <div class="container">
+            <h2 class="title_2">WHAT WE DO</h2>
+            <div class="content__wrapper">
+              <div class="content__box">
+                <div class="image">
+                  <div class="rect"></div>
+                  <img
+                    src="./assets/images/web_p/img_1.webp"
+                    alt="trade center"
+                  />
+                </div>
+                <div class="description">
+                  <h3 class="title_3">ONE WORLD</h3>
+                  <h2 class="desc_title">TRADE CENTER</h2>
+                  <p class="text">
+                    Increasing prosperity in our lives can be accomplished by
+                    having the right frame of mind. The truth is, our thoughts
+                    are very powerful.
+                  </p>
+                  <button class="more_btn">MORE DETAILS</button>
+                  <p class="coords">New York City, United States - 1776 feet</p>
+                </div>
+              </div>
+              <div class="content__box reverse">
+                <div class="image">
+                  <div class="rect_2"></div>
+                  <img
+                    src="./assets/images/web_p/img_2.webp"
+                    alt="commerce center"
+                  />
+                </div>
+                <div class="description">
+                  <h3 class="title_3">INTERNATIONAL</h3>
+                  <h2 class="desc_title">COMMERCE CENTRE</h2>
+                  <p class="text">
+                   Successful businesses have many things in common, today we’ll look at the big ‘R’ of recognition and how a digital advertising network may help.
+                  </p>
+                  <button class="more_btn">MORE DETAILS</button>
+                  <p class="coords">Hong Kong - 1588 feet</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="cards">
+          <div class="container">
+            
+          </div>
+        </section>
+      </main>
+    </div>
   </body>
 </html>
