--- a/index.html
+++ b/index.html
@@ -114,7 +114,51 @@
         </section>
         <section class="cards">
           <div class="container">
-            
+            <h2 class="title_2_white">LATEST NEWS</h2>
+            <div class="content__box gap_30">
+              <div class="card">
+                <img src="./assets/images/web_p/card_1.webp" alt="card 1" class="card__image">
+                <h3 class="card__title">SEE THE UNMATCHED BEAUTY OF THE GREAT.</h3>
+                <p class="card__text">Free directories: directories are perfect for customers that are searching for...</p>
+                <div class="card__bottom">
+                  <div class="card__bottom_photo">
+                    <img src="./assets/images/photos/photo_1.png" alt="photo">
+                  </div>
+                  <div class="card__bottom_info">
+                    <div class="name">ALJA BRUN</div>
+                    <div class="data">20 Jan 2020</div>
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <img src="./assets/images/web_p/card_2.webp" alt="card 2" class="card__image">
+                <h3 class="card__title">EFFECTIVE ADVERTISING POINTERS.</h3>
+                <p class="card__text">Having a home based business is a wonderful asset to your life...</p>
+                <div class="card__bottom">
+                  <div class="card__bottom_photo">
+                    <img src="./assets/images/photos/photo_2.png" alt="photo 2">
+                  </div>
+                  <div class="card__bottom_info">
+                    <div class="name">DOMINIC FREEMAN</div>
+                    <div class="data">13 Dec 2019</div>
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <img src="./assets/images/web_p/card_3.webp" alt="card 3" class="card__image">
+                <h3 class="card__title">HYPNOTIZE YOURSELF INTO THE GHOST.</h3>
+                <p class="card__text">There are many things that are important to catalog design...</p>
+                <div class="card__bottom">
+                  <div class="card__bottom_photo">
+                    <img src="./assets/images/photos/photo_3.png" alt="photo 3">
+                  </div>
+                  <div class="card__bottom_info">
+                    <div class="name">ALICE WARD</div>
+                    <div class="data">30 Nov 2019</div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </section>
       </main>
