--- a/index.html
+++ b/index.html
@@ -4,7 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Montichello</title>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
+    />
     <link rel="stylesheet" href="./css/main.css" />
+    <script
+      src="https://code.jquery.com/jquery-3.7.1.js"
+      integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+      crossorigin="anonymous"
+    ></script>
+
+    <script
+      type="text/javascript"
+      src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
+    ></script>
     <script src="./js/app.js" defer></script>
   </head>
   <body>
@@ -22,9 +37,9 @@
             <nav class="nav">
               <ul class="nav__list">
                 <li><a href="#!" class="nav__link">ABOUT US</a></li>
-                <li><a href="#!" class="nav__link">PROJECTS</a></li>
-                <li><a href="#!" class="nav__link">NEWS</a></li>
-                <li><a href="#!" class="nav__link">CONTACT</a></li>
+                <li><a href="#projects" class="nav__link">PROJECTS</a></li>
+                <li><a href="#news" class="nav__link">NEWS</a></li>
+                <li><a href="#contact" class="nav__link">CONTACT</a></li>
               </ul>
             </nav>
             <div class="socials">
@@ -53,21 +68,30 @@
       <main class="main">
         <section class="hero">
           <div class="container">
+            
             <div class="screen">
-              <h1 class="main__title">SIMPLE & MODERN</h1>
-              <p class="subtitle">WE MAKE THE WORLD BEAUTIFUL EVERYDAY</p>
+              <div class="screen__item">
+
+                <h1 class="main__title">SIMPLE & MODERN</h1>
+                <p class="subtitle">WE MAKE THE WORLD BEAUTIFUL EVERYDAY</p>
+              </div>
+              <div class="screen__item">
+
+                <h1 class="main__title">First screen</h1>
+                <p class="subtitle">WE MAKE THE WORLD BEAUTIFUL EVERYDAY</p>
+              </div>
+              <div class="screen__item">
+
+                <h1 class="main__title">Second screen</h1>
+                <p class="subtitle">WE MAKE THE WORLD BEAUTIFUL EVERYDAY</p>
+              </div>
             </div>
           </div>
-          <div class="dots" id="parent">
-            <button class="dot"></button>
-            <button class="dot"></button>
-            <button class="dot"></button>
-            <button class="dot"></button>
-            <button class="dot"></button>
-          </div>
+         
+          <a href="#projects" id="scroll-link" class="arrow_btn"></a>
         </section>
 
-        <section class="section">
+        <section class="section" id="projects">
           <div class="container">
             <h2 class="title_2">WHAT WE DO</h2>
             <div class="content__wrapper">
@@ -103,26 +127,45 @@
                   <h3 class="title_3">INTERNATIONAL</h3>
                   <h2 class="desc_title">COMMERCE CENTRE</h2>
                   <p class="text">
-                   Successful businesses have many things in common, today we’ll look at the big ‘R’ of recognition and how a digital advertising network may help.
+                    Successful businesses have many things in common, today
+                    we’ll look at the big ‘R’ of recognition and how a digital
+                    advertising network may help.
                   </p>
-                  <button class="more_btn">MORE DETAILS</button>
+                  <button class="more_btn" id="more_btn">MORE DETAILS</button>
                   <p class="coords">Hong Kong - 1588 feet</p>
                 </div>
               </div>
             </div>
           </div>
         </section>
-        <section class="cards">
+        <section class="cards" id="news">
           <div class="container">
             <h2 class="title_2_white">LATEST NEWS</h2>
-            <div class="content__box gap_30">
+            <!-- <div class="card__box">
+              <div class="card__item">1</div>
+              <div class="card__item">2</div>
+              <div class="card__item">3</div>
+              <div class="card__item">4</div>
+              <div class="card__item">5</div>
+              <div class="card__item">6</div>
+            </div> -->
+            <div class="content__box">
               <div class="card">
-                <img src="./assets/images/web_p/card_1.webp" alt="card 1" class="card__image">
-                <h3 class="card__title">SEE THE UNMATCHED BEAUTY OF THE GREAT.</h3>
-                <p class="card__text">Free directories: directories are perfect for customers that are searching for...</p>
+                <img
+                  src="./assets/images/web_p/card_1.webp"
+                  alt="card 1"
+                  class="card__image"
+                />
+                <h3 class="card__title">
+                  SEE THE UNMATCHED BEAUTY OF THE GREAT.
+                </h3>
+                <p class="card__text">
+                  Free directories: directories are perfect for customers that
+                  are searching for...
+                </p>
                 <div class="card__bottom">
                   <div class="card__bottom_photo">
-                    <img src="./assets/images/photos/photo_1.png" alt="photo">
+                    <img src="./assets/images/photos/photo_1.png" alt="photo" />
                   </div>
                   <div class="card__bottom_info">
                     <div class="name">ALJA BRUN</div>
@@ -131,12 +174,22 @@
                 </div>
               </div>
               <div class="card">
-                <img src="./assets/images/web_p/card_2.webp" alt="card 2" class="card__image">
+                <img
+                  src="./assets/images/web_p/card_2.webp"
+                  alt="card 2"
+                  class="card__image"
+                />
                 <h3 class="card__title">EFFECTIVE ADVERTISING POINTERS.</h3>
-                <p class="card__text">Having a home based business is a wonderful asset to your life...</p>
+                <p class="card__text">
+                  Having a home based business is a wonderful asset to your
+                  life...
+                </p>
                 <div class="card__bottom">
                   <div class="card__bottom_photo">
-                    <img src="./assets/images/photos/photo_2.png" alt="photo 2">
+                    <img
+                      src="./assets/images/photos/photo_2.png"
+                      alt="photo 2"
+                    />
                   </div>
                   <div class="card__bottom_info">
                     <div class="name">DOMINIC FREEMAN</div>
@@ -145,12 +198,21 @@
                 </div>
               </div>
               <div class="card">
-                <img src="./assets/images/web_p/card_3.webp" alt="card 3" class="card__image">
+                <img
+                  src="./assets/images/web_p/card_3.webp"
+                  alt="card 3"
+                  class="card__image"
+                />
                 <h3 class="card__title">HYPNOTIZE YOURSELF INTO THE GHOST.</h3>
-                <p class="card__text">There are many things that are important to catalog design...</p>
+                <p class="card__text">
+                  There are many things that are important to catalog design...
+                </p>
                 <div class="card__bottom">
                   <div class="card__bottom_photo">
-                    <img src="./assets/images/photos/photo_3.png" alt="photo 3">
+                    <img
+                      src="./assets/images/photos/photo_3.png"
+                      alt="photo 3"
+                    />
                   </div>
                   <div class="card__bottom_info">
                     <div class="name">ALICE WARD</div>
@@ -161,7 +223,22 @@
             </div>
           </div>
         </section>
+        <section class="gallery" id="gallery">
+          <div class="container">
+            <h2 class="title_2">GALLERY</h2>
+            <div class="gallery__grid">
+              <img class="grid-item grid-item__col_2 grid-item__row_2" src="./assets/images/web_p/gallery/image_1.webp" alt="image 1">
+              <img class="grid-item" src="./assets/images/web_p/gallery/image_2.webp" alt="image 2">
+              <img class="grid-item" src="./assets/images/web_p/gallery/image_3.webp" alt="image 3">
+              <img class="grid-item" src="./assets/images/web_p/gallery/image_4.webp" alt="image 4">
+              <img class="grid-item" src="./assets/images/web_p/gallery/image_5.webp" alt="image 5">
+            </div>
+            <button class="more_btn">SEE MORE</button>
+          </div>
+        </section>
       </main>
+      <footer class="footer" id="footer">
+      </footer>
     </div>
   </body>
 </html>
